# kinova_gen3

./: .gitignore  CMakeLists.txt  readme.md
include/: experimental_utilities.h  gen3_commands.h  gen3_utilities.h  joystick2d.cc  joystick2d.hh  joystickBox.cc  joystickBox.hh  spacemouse.h  spnavkinova.h
input_devices/spacemouse/: Makefile  spacemouse.c  spacemouse.cpp  test
joystick/: joystick.cc
sessions/: Banana3DMasood1907191432  Banana3DMasood1907191434  Banana3DMasood1907191532  Banana3DMasood1907191541  IdealPourPlot.fig  PickUp2DMasood190718.txt  PickUp3DMasood190718.txt  Pour2DMasood190718.txt  Pour3DMasood190718.txt  PourIdeal1907241816  PourMartin3D_1908 11121  PourMartin3D_1908 11122  PourMartin6D_1908 11154  PourMartin6D_1908 11155  RiceMasood3D_1907251414  RiceMasood3D_1907251428  RiceMasood6D_1907251415  TestTest3D_1907251305  createTrajectoryPlot3D.m  extract_pose.py  plot_data.m  read_data.m  read_data.m~  testboop3D_1908011555  testboop3D_1908011558  testboop3D_1908011602  testboop3D_1908011733  testboop3D_1908011734  testboop3D_1908011736  testboop3D_1908011737  testboop3D_1908021608  testboop3D_1908021610  testboop3D_1908021611  testboop3D_1908021614  testboop3D_1908021615  testboop3D_1908021616  testboop6D_1908 21609  testtest31908011527
sessions/new_data/: PourMasood2D_1907251433  PourMasood3D_1907251440  PourMasood6D_1907251444
sessions/pose_data/: PourMasood2D_1907251433  PourMasood3D_1907251440  PourMasood6D_1907251444
src/: CMakeLists.txt  ideal_pour.cpp  ideal_trajectory.cpp  joystick2D.cpp  joystick3D.cpp  joystick6D.cpp  move_angular_and_cartesian.cpp  send_joint_speed.cpp  sequence.cpp  simple.cpp  twist_command.cpp
